tarmac/infra-tools/modules/istio/templates/virtual_services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${mpt_ui_vs_name}
  namespace: ${istio_vs_namespace}
spec:
  hosts:
    - "${istio_ingress_hostname}"
  gateways:
  - ${istio_gw_name}.${istio_namespace}.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ${mpt_ui_vs_name}
        port:
          number: ${mpt_ui_vs_port_number}
